<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.florianlopes</groupId>
	<artifactId>spring-mvc-test-utils-parent</artifactId>
	<version>${revision}${changelist}</version>
	<packaging>pom</packaging>

	<name>spring-mvc-test-utils-parent</name>
    <description>Spring MVC utils aimed to ease Spring MVC framework testing</description>
	<url>https://blog.florianlopes.io/tool-for-spring-mockmvcrequestbuilder-forms-tests/</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

	<modules>
		<module>spring-mvc-test-utils</module>
		<module>smoke-tests</module>
	</modules>

	<properties>
		<revision>4.0.0</revision>
		<changelist>-SNAPSHOT</changelist>

		<java.version>17</java.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<spring-framework.version>6.1.13</spring-framework.version>

		<logback-classic.version>1.5.7</logback-classic.version>

		<jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
		<jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>
		<jakarta.el-api.version>6.0.1</jakarta.el-api.version>
		<jakarta.el.version>4.0.2</jakarta.el.version>

		<slf4j-api.version>1.7.36</slf4j-api.version>

		<junit-jupiter.version>5.11.0</junit-jupiter.version>

		<lombok.version>1.18.34</lombok.version>

		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.4.0</maven-surefire-plugin.version>
		<versions-maven-plugin.version>2.17.1</versions-maven-plugin.version>
		<maven-pmd-plugin.version>3.25.0</maven-pmd-plugin.version>
		<spotbugs-maven-plugin.version>4.8.6.4</spotbugs-maven-plugin.version>

		<sonar.organization>f-lopes</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring-framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<printFailingErrors>true</printFailingErrors>
					<analysisCache>true</analysisCache>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${spotbugs-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.rudikershaw.gitbuildhook</groupId>
				<artifactId>git-build-hook-maven-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<installHooks>
						<pre-commit>.git-hooks/pre-commit.sh</pre-commit>
					</installHooks>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>install</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

    <developers>
        <developer>
            <name>Florian Lopes</name>
            <email>florian.lopes@outlook.com</email>
            <organization>Florian Lopes</organization>
			<organizationUrl>https://www.florianlopes.io</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/f-lopes/spring-mvc-test-utils.git</connection>
        <developerConnection>scm:git:ssh://github.com/f-lopes/spring-mvc-test-utils.git</developerConnection>
        <url>https://github.com/f-lopes/spring-mvc-test-utils</url>
    </scm>

</project>
